toolkit/themes/winstripe/mozapps/extensions/extensions.css
/* ... */
.
global
-
warning
.
global
-
warning
.
button
-
link
{
text
-
shadow
:
#
FFFFFF
1px
1px
1px
;
}
#
addons
-
page
[
warning
]
.
global
-
warning
-
container
{
background
-
color
:
rgba
(
255
255
0
0
.
1
)
;
background
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
stripes
-
warning
.
png
"
)
;
background
-
repeat
:
repeat
-
x
;
}
#
detail
-
view
.
global
-
warning
{
padding
:
4px
12px
;
border
-
bottom
:
1px
solid
#
CAD4E0
;
}
media
all
and
(
max
-
width
:
600px
)
{
.
global
-
warning
-
text
{
display
:
none
;
}
.
global
-
warning
.
warning
-
icon
{
background
-
color
:
#
FFF
;
box
-
shadow
:
0px
0px
2px
5px
#
FFF
;
border
-
radius
:
10px
;
}
}
/
*
Plugins
aren
'
t
yet
disabled
by
safemode
(
bug
342333
)
so
don
'
t
show
that
warning
when
viewing
plugins
.
*
/
#
addons
-
page
[
warning
=
"
safemode
"
]
.
view
-
pane
[
type
=
"
plugin
"
]
.
global
-
warning
-
container
#
addons
-
page
[
warning
=
"
safemode
"
]
#
detail
-
view
[
loading
=
"
true
"
]
.
global
-
warning
-
container
{
background
-
color
:
inherit
;
background
-
image
:
none
;
}
/
*
*
*
notification
icons
*
*
*
/
.
warning
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
alerticon
-
warning
.
png
"
)
;
width
:
16px
;
height
:
15px
;
margin
:
3px
0
;
}
.
error
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
alerticon
-
error
.
png
"
)
;
width
:
16px
;
height
:
15px
;
margin
:
3px
0
;
}
.
pending
-
icon
.
info
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
alerticon
-
info
-
positive
.
png
"
)
;
width
:
16px
;
height
:
15px
;
margin
:
3px
0
;
}
.
addon
-
view
[
pending
=
"
disable
"
]
.
pending
-
icon
.
addon
-
view
[
pending
=
"
uninstall
"
]
.
pending
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
alerticon
-
info
-
negative
.
png
"
)
;
width
:
16px
;
height
:
15px
;
margin
:
3px
0
;
}
/
*
*
*
view
alert
boxes
*
*
*
/
.
alert
-
container
{
-
moz
-
box
-
align
:
center
;
}
.
alert
-
spacer
-
before
{
-
moz
-
box
-
flex
:
1
;
}
.
alert
-
spacer
-
after
{
-
moz
-
box
-
flex
:
3
;
}
.
alert
{
-
moz
-
box
-
align
:
center
;
padding
:
10px
;
color
:
#
373D48
;
border
:
1px
solid
#
A8B8D1
;
border
-
radius
:
8px
;
background
-
image
:
-
moz
-
linear
-
gradient
(
top
#
FFF
#
ECF1F7
)
;
background
-
clip
:
padding
-
box
;
box
-
shadow
:
2px
2px
4px
#
999
;
}
.
alert
.
alert
-
title
{
font
-
weight
:
bold
;
font
-
size
:
200
%
;
margin
-
bottom
:
15px
;
}
.
alert
.
addon
-
control
{
margin
:
1em
2em
;
}
.
loading
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
icons
/
loading_16
.
png
"
)
;
padding
-
left
:
20px
;
padding
-
right
:
20px
;
}
/
*
*
*
category
selector
*
*
*
/
#
categories
{
-
moz
-
appearance
:
none
;
border
:
none
;
-
moz
-
margin
-
end
:
-
1px
;
background
-
color
:
transparent
;
position
:
relative
;
margin
-
top
:
31px
;
}
.
category
{
-
moz
-
appearance
:
none
;
background
-
color
:
transparent
;
color
:
#
252F3B
;
min
-
height
:
0
;
padding
:
10px
4px
;
border
-
width
:
1px
;
border
-
style
:
solid
;
border
-
color
:
transparent
;
-
moz
-
box
-
align
:
center
;
overflow
:
hidden
;
}
.
category
:
-
moz
-
locale
-
dir
(
ltr
)
{
border
-
top
-
left
-
radius
:
5px
;
border
-
bottom
-
left
-
radius
:
5px
;
}
.
category
:
-
moz
-
locale
-
dir
(
rtl
)
{
border
-
top
-
right
-
radius
:
5px
;
border
-
bottom
-
right
-
radius
:
5px
;
}
.
category
[
disabled
]
{
border
-
top
:
0
;
border
-
bottom
:
0
;
height
:
0
;
opacity
:
0
;
-
moz
-
transition
-
property
:
height
opacity
;
-
moz
-
transition
-
duration
:
1s
0
.
8s
;
}
.
category
:
not
(
[
disabled
]
)
{
height
:
52px
;
-
moz
-
transition
-
property
:
height
opacity
;
-
moz
-
transition
-
duration
:
1s
0
.
8s
;
}
.
category
[
selected
]
{
background
-
color
:
rgba
(
255
255
255
0
.
4
)
;
color
:
#
252F3B
;
border
-
color
:
#
C3CEDF
;
-
moz
-
border
-
end
-
color
:
#
E2E9F2
;
}
.
category
-
name
{
font
-
size
:
150
%
;
}
/
*
Maximize
the
size
of
the
viewport
when
the
window
is
small
*
/
media
all
and
(
max
-
width
:
800px
)
{
.
category
-
name
{
display
:
none
;
}
}
.
category
-
badge
{
background
-
color
:
#
55D4FF
;
padding
:
2px
8px
;
margin
:
6px
0
;
border
-
radius
:
10000px
;
color
:
#
FFF
;
font
-
weight
:
bold
;
text
-
align
:
center
;
}
.
category
-
badge
[
value
=
"
0
"
]
{
visibility
:
hidden
;
}
.
category
-
icon
{
width
:
32px
;
height
:
32px
;
-
moz
-
margin
-
start
:
6px
;
}
#
category
-
search
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
search
.
png
"
)
;
}
#
category
-
discover
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
discover
.
png
"
)
;
}
#
category
-
languages
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
languages
.
png
"
)
;
}
#
category
-
searchengines
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
searchengines
.
png
"
)
;
}
#
category
-
extensions
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
extensions
.
png
"
)
;
}
#
category
-
themes
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
themes
.
png
"
)
;
}
#
category
-
plugins
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
plugins
.
png
"
)
;
}
#
category
-
availableUpdates
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
available
.
png
"
)
;
}
#
category
-
recentUpdates
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
recent
.
png
"
)
;
}
/
*
*
*
header
*
*
*
/
#
header
{
margin
-
bottom
:
18px
;
}
/* ... */

