Bug 635761 - Remove blurry white text shadows on Windows. ui-r=boriss r=unfocused a=mossop
UltraBlame original commit: a9a670d16a92b9dc69d1af894aa8b91d4f5c2c96

--- a/toolkit/themes/winstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/winstripe/mozapps/extensions/extensions.css
@@ -1324,30 +1324,6 @@ weight
 bold
 ;
 }
-.
-global
--
-warning
-.
-global
--
-warning
-.
-button
--
-link
-{
-text
--
-shadow
-:
-#
-FFFFFF
-1px
-1px
-1px
-;
-}
 #
 addons
 -
@@ -4015,16 +3991,6 @@ bottom
 :
 0
 ;
-text
--
-shadow
-:
-1px
-1px
-1px
-#
-FFF
-;
 -
 moz
 -
@@ -4117,16 +4083,6 @@ font
 weight
 :
 bold
-;
-text
--
-shadow
-:
-1px
-1px
-1px
-#
-FFF
 ;
 -
 moz
@@ -5060,34 +5016,6 @@ rgba
 color
 :
 black
-;
-}
-.
-addon
-[
-selected
-]
-.
-name
--
-container
-{
-text
--
-shadow
-:
-1px
-1px
-1px
-rgba
-(
-255
-255
-255
-0
-.
-7
-)
 ;
 }
 .
@@ -7348,15 +7276,6 @@ align
 :
 center
 ;
-text
--
-shadow
-:
-0
-0
-3px
-white
-;
 }
 #
 updates
@@ -7367,15 +7286,6 @@ button
 -
 link
 {
-text
--
-shadow
-:
-0
-0
-3px
-white
-;
 font
 -
 weight
